syntax = "proto3";

package org.openmcf.provider.civo.civodnsrecord.v1;

import "buf/validate/validate.proto";
import "org/openmcf/provider/civo/civodnsrecord/v1/spec.proto";
import "org/openmcf/provider/civo/civodnsrecord/v1/stack_outputs.proto";
import "org/openmcf/shared/metadata.proto";

// CivoDnsRecord is a Kubernetes Resource Model (KRM) style resource for managing
// individual DNS records within a Civo DNS zone.
message CivoDnsRecord {
  // api-version
  string api_version = 1 [(buf.validate.field).string.const = 'civo.openmcf.org/v1'];

  // resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CivoDnsRecord'];

  // metadata
  org.openmcf.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  // spec
  CivoDnsRecordSpec spec = 4 [(buf.validate.field).required = true];

  // status
  CivoDnsRecordStatus status = 5;
}

// CivoDnsRecordStatus represents the observed state of a Civo DNS record.
message CivoDnsRecordStatus {
  // stack-outputs from the IaC deployment
  CivoDnsRecordStackOutputs outputs = 1;
}
